@@ -569,16 +569,6 @@ condition|)
 return|return
 name|NULL
 return|;
-if|#
-directive|if
-name|GTK_CHECK_VERSION
-argument_list|(
-literal|2
-operator|,
-literal|13
-operator|,
-literal|4
-argument_list|)
 if|if
 condition|(
 operator|!
@@ -633,14 +623,12 @@ block|{
 name|GIcon
 modifier|*
 name|icon
-decl_stmt|;
-name|icon
-operator|=
+init|=
 name|g_file_info_get_icon
 argument_list|(
 name|file_info
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|info
 operator|=
 name|gtk_icon_theme_lookup_by_gicon
@@ -675,8 +663,6 @@ name|file
 argument_list|)
 expr_stmt|;
 block|}
-endif|#
-directive|endif
 if|if
 condition|(
 operator|!
